package com.example.Spring_Boot_HMedia;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class HMediaApplication {

	public static void main(String[] args) {
		SpringApplication.run(HMediaApplication.class, args);
	}

}
